[package]
name = "inmacro-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
axum-extra = { version = "0.9.4", features = ["typed-header"] }
dotenv = "0.15.0"
oauth2 = "4.4.2"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.215"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "macros", "chrono", "postgres"] }
sqlx-cli = "0.8.2"
thiserror = "2.0.6"
tokio = "1.42.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = [
  "registry",
  "env-filter",
] }
tower-http = { version = "0.6.2", features = ["fs", "trace", "cors"] }
jsonwebtoken = "9.3.0"
once_cell = "1.20.2"
async-trait = "0.1.83"
bcrypt = "0.16.0"
redis = { version = "0.27.6", features = ["tokio-comp"] }
rand = "0.8.5"
lettre = "0.11.11"
serde_json = "1.0.133"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
lazy_static = "1.5.0"
chrono = "0.4.39"
